--- a/GameTest/Gametest.csproj
+++ b/GameTest/Gametest.csproj
@@ -56,8 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="..\..\..\..\..\..\..\Program Files %28x86%29\MonoGame\v3.0\Assemblies\WindowsGL\SDL.dll">
-      <Link>SDL.dll</Link>
+    <Content Include="Content\Hero\Hero.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Tiles\Crate.bmp">
@@ -84,6 +83,7 @@
     <Content Include="Content\Tiles\wall002.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="DLLs\SDL.dll" />
     <Content Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup />
